--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@mts-exolve/web-voice-sdk": "^1.8.0",
 		"@nanostores/solid": "^0.4.2",
 		"@stitches/core": "^1.2.8",
+		"jssip": "^3.10.1",
 		"nanostores": "^0.9.4",
 		"solid-icons": "^1.1.0",
 		"solid-js": "^1.7.8",
